--- a/package.json
+++ b/package.json
@@ -127,6 +127,15 @@
     "react": "^15.1.0"
   },
   "dependencies": {
+    "fs-extra": "^0.26.2",
+    "glob": "^7.0.1",
+    "inquirer": "^0.12.0",
+    "mime": "^1.3.4",
+    "npmlog": "^2.0.4",
+    "plist": "^1.2.0",
+    "to-camel-case": "^1.0.0",
+    "xcode": "^0.8.2",
+    "xmldoc": "^0.4.0",
     "absolute-path": "^0.0.0",
     "art": "^0.10.0",
     "babel-core": "^6.6.4",
